FIX: composer actions fix z-index for firefox touch tablets

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -39,7 +39,7 @@ html.composer-open:not(.has-full-page-chat) {
 
 .composer-toggles-menu-content,
 .composer-actions-dropdown {
-  z-index: z("composer", "dropdown") + 1;
+  z-index: z("mobile-composer");
 }
 
 #reply-control {
